<resources>
    <string name="app_name">DataSecure</string>
    <string name="text_btn_save_profile">Save Profile Information</string>
    <string name="text_btn_show_profile">Show Profile Information</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_app_desc">DataSecure provides you secure storage of your personal, financial, insurance, household, web connectivity information and more.</string>
    <string name="hint_password_again">Password Again</string>
    <string name="text_btn_save">Save</string>
    <string name="text_first_time_use">You are starting this app for the first time. Please create a username and password to use this app securely.</string>
    <string name="title_user_details">Enter new user details</string>
    <string name="title_profile_login">Login</string>
    <string name="title_info">Save Information</string>
    <string name="text_btn_login">Login</string>
    <string name="title_about">About</string>
    <string name="text_brief_app_desc">DataSecure is a secure vault for your personal information.</string>
    <string name="created_by">Created by Darshan Kamble</string>
    <string name="text_btn_logout">Logout</string>
    <string name="title_profile_page">Your Profile</string>
    <string name="btn_ok">OK</string>
    <string name="text_version">Version : 1.0</string>
    <string-array name="save_info_items">
        <item>Personal Details</item>
        <item>Financial Details</item>
        <item>Web Identification Details</item>
        <item>Insurance Details</item>
        <item>Educational Details</item>
        <item>Login Details</item>
    </string-array>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_dob">dd/mm/yyyy</string>
    <string name="hint_aadhar_no">Aadhar Card No.</string>
    <string name="hint_primary_email">Primary Email Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hint_bank_name">Bank Name</string>
    <string name="hint_bank_branch_name">Branch Name</string>
    <string name="hint_bank_acc_no">Account No</string>
    <string name="text_bank_acc_type">Account Type</string>
    <string-array name="bank_acc_types">
        <item>Savings Account</item>
        <item>Current Account</item>
        <item>Fixed Deposit Account</item>
        <item>Recurring Deposit Account</item>
    </string-array>
    <string name="hint_secondary_email">Secondary Email Address</string>
    <string name="hint_twitter_id">Twitter ID</string>
    <string name="hint_facebook_id">Facebook ID</string>
    <string name="hint_snapchat_id">Snapchat ID</string>
    <string name="hint_instagram_id">Instagram ID</string>
    <string name="hint_insurance_name">Insurance Policy Name</string>
    <string name="hint_insurance_provider">Insurance Provider</string>
    <string name="hint_insurance_expiry_date">dd/mm/yyyy</string>
    <string name="hint_insurance_premium">Insurance Premium Amount</string>
    <string name="hint_school_name">School Name</string>
    <string name="hint_junior_college">Junior College or Diploma College</string>
    <string name="hint_grad_college">Graduation College</string>
    <string name="hint_10th_marks">Class 10th Marks</string>
    <string name="hint_12th_diploma_marks">Class 12th or Diploma Marks</string>
    <string name="hint_grad_marks">Graduation Marks</string>
</resources>
