<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/DialogTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_app_title"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:text="@string/text_brief_app_desc"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:text="@string/text_version"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:text="@string/created_by"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:background="@color/colorPrimary"
        android:text="@string/btn_ok" />

</LinearLayout>