<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground">

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:hint="@string/hint_full_name"
        android:textColorHint="@color/textColorHint" />

    <EditText
        android:id="@+id/et_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_full_name"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:hint="@string/hint_dob"
        android:textColorHint="@color/textColorHint" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_dob"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal">

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/textColorHint" />

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/textColorHint" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_aadhar_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg_gender"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:hint="@string/hint_aadhar_no"
        android:inputType="number"
        android:textColorHint="@color/textColorHint" />

    <EditText
        android:id="@+id/et_primary_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_aadhar_no"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:hint="@string/hint_primary_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/textColorHint" />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_primary_email_id"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/views_margin_horizontal"
            android:layout_marginEnd="@dimen/views_margin_vertical"
            android:layout_marginStart="@dimen/views_margin_vertical"
            android:layout_marginTop="@dimen/views_margin_horizontal"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textAllCaps="false" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/views_margin_horizontal"
            android:layout_marginEnd="@dimen/views_margin_vertical"
            android:layout_marginStart="@dimen/views_margin_vertical"
            android:layout_marginTop="@dimen/views_margin_horizontal"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>