<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/DialogTheme">

    <EditText
        android:id="@+id/et_insurance_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:hint="@string/hint_insurance_name"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_insurance_provider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_insurance_name"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:hint="@string/hint_insurance_provider"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_insurance_expiry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_insurance_provider"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:hint="@string/hint_insurance_expiry_date"
        android:inputType="date"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_insurance_premium_amt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_insurance_expiry_date"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:hint="@string/hint_insurance_premium"
        android:inputType="numberDecimal"
        android:maxLines="1" />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_insurance_premium_amt"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/views_margin_horizontal"
            android:layout_marginEnd="@dimen/views_margin_vertical"
            android:layout_marginStart="@dimen/views_margin_vertical"
            android:layout_marginTop="@dimen/views_margin_horizontal"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/views_margin_horizontal"
            android:layout_marginEnd="@dimen/views_margin_vertical"
            android:layout_marginStart="@dimen/views_margin_vertical"
            android:layout_marginTop="@dimen/views_margin_horizontal"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>