<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.appsbydmk.datasecure.activities.UserDetailsActivity">

    <TextView
        android:id="@+id/tv_first_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:background="@drawable/rectangle_border"
        android:gravity="center"
        android:paddingBottom="@dimen/views_padding_horizontal"
        android:paddingEnd="@dimen/views_padding_vertical"
        android:paddingStart="@dimen/views_padding_vertical"
        android:paddingTop="@dimen/views_padding_horizontal"
        android:text="@string/text_first_time_use"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_first_use" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:maxLength="5"
        android:maxLines="1"
        android:textColorHint="@color/textColorHint" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:textColorHint="@color/textColorHint" />

    <EditText
        android:id="@+id/et_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:hint="@string/hint_password_again"
        android:inputType="textPassword"
        android:maxLength="10"
        android:maxLines="1"
        android:textColorHint="@color/textColorHint" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/views_margin_horizontal"
        android:layout_marginEnd="@dimen/views_margin_vertical"
        android:layout_marginStart="@dimen/views_margin_vertical"
        android:layout_marginTop="@dimen/views_margin_horizontal"
        android:background="@color/colorPrimary"
        android:text="@string/text_btn_save"
        android:textAllCaps="false" />

</LinearLayout>
